TFP-5554: Fikset til å returnere en streng istedenfor HistorikkEndretFeltVerdiType.